add a bunch more stuff

--- a/js/package.json
+++ b/js/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "Matthieu Pauze",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  }
 }
